--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.3",
+		"sharp": "^0.33.5",
 		"typed.js": "^2.1.0",
 		"typescript": "^5.6.2"
 	}
